test/errors/009_panic.eu
# -*- mode: conf -*-

x: panic("This exits immediately with message and non-zero exit code")
